@@ -11,6 +11,6 @@ group :development do
   gem "jeweler", "~> 1.8.3"
   gem "simplecov", ">= 0"
   gem "builtinextension", ">= 0.0.0"
-  gem "weightedpicker", ">= 0.0.2"
+  gem "weightedpicker", ">= 0.1.0"
   #gem "psych", ">= 0"
 end
